<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.trabalho.ricardolopes.uniforacademico.activities.LoginActivity">

        <ImageView
            android:id="@+id/vlogin_imageLogo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcCompat="@drawable/uniforlogo"
            android:contentDescription="@string/descricaoLogo"
            android:layout_gravity="center_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vlogin_textInputLayout_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vlogin_edittext_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/usuario"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vlogin_textInputLayout_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/vlogin_editText_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senha"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/naoecadastrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:paddingTop="32dp"
            android:paddingBottom="16dp"
            android:id="@+id/vlogin_TextView_efetuarCadastro" />

        <Button
            android:id="@+id/vlogin_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/blue_800"
            android:textColor="@color/white"
            />

    </LinearLayout>
</ScrollView>

