<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.trabalho.ricardolopes.uniforacademico.activities.CadastrarActivity">

        <TextView
            android:text="@string/cadastrarnovo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17dp"
            android:id="@+id/vCadastrar_TextView_cadastrarNovoUsuario"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vcadastro_textInputLayout_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vcadastro_edittext_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/usuario" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/vcadastro_textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/vcadastro_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vcadastro_textInputLayout_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vcadastro_edittext_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/senha" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/vcadastro_button_cadastrar"
            android:text="@string/cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:background="@color/blue_800"
            android:textColor="@color/white"
            />


    </LinearLayout>
</ScrollView>

